--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -21,3 +21,5 @@ updates:
       time: "03:00"
       timezone: "UTC"
     open-pull-requests-limit: 5
+    commit-message:
+      prefix: "build(NoTicket)"
