--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,3 +11,15 @@ updates:
       interval: "weekly"
     commit-message:
       prefix: "build(NoTicket)"
+
+  # Keep GitHub Actions up to date
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+      day: "monday"
+      time: "03:00"
+      timezone: "UTC"
+    open-pull-requests-limit: 5
+    commit-message:
+      prefix: "build(NoTicket)"
